Beginning work on content for about.html

--- a/about.html
+++ b/about.html
@@ -1,4 +1,39 @@
 ---
 title: about
 layout: default
+permalink: about
 ---
+
+<div>
+  <div style="width: auto; margin: 30px 10%; padding: 30px; background-color: white">
+    <h3 style="color: #1e7b1e">Who We Are and What We Do</h3>
+    <p>The Cloverleaf Area Ecumenical Assistance Program (CAEAP, or simply the "Cloverleaf Food Bank")
+       is an association of faith-based organizations in the South Hills area of Pittsburgh who are committed to
+      serving families in our communities, regardless of their religious affiliation,
+      who are in need of food or other forms of assistance. Our service area is centered
+      symbolically around the interchange of PA Route 51 and Curry Hollow Rd. in Pleasant Hills, PA
+      - a feature known locally as simply "the Cloverleaf".
+    </p>
+    <p>Our main service to the area is our community food pantry operating out of St. Elizabeth
+      of Hungary Roman Catholic Church (1 Grove Pl., Pittsburgh, PA 15236) - our service area constitutes
+      the area within a two-mile radius of the pantry. We hold
+      food distribution events every other Tuesday from 9:00 AM to 12:00 PM at our pantry location
+      for clients in our service area. As of November 2020, CAEAP serves <strong>over 200 households</strong>
+      in our service area with a team of <strong>30 volunteers</strong> who aid in food collection and
+      distribution.
+    </p>
+    <p>In addition to food we also serve as a distribution point for the following:</p>
+    <ul>
+      <li>KDKA Thanksgiving Turkey Certificates</li>
+      <li><a href="toysfortots.org">Toys for Tots</a></li>
+      <li><a href="https://shimcares.org/shim-back-to-school-event-distributes-backpacks-to-students/">Backpacks and school supplies</a></li>
+      <li>New and gently used hats, coats, and gloves</li>
+      <li>Emergency financial assistance for housing or medical expenses for clients who meet
+        certain established criteria (call us at (412) 207-1657)
+    <p>For information about registering as a client of CAEAP, please visit our <a href="gethelp">Get Help</a> page.</p>
+    <p>For information about donating supplies or volunteering with us, please visit our <a href="givehelp">Give Help</a> page.</p>
+  </div>
+  <hr/>
+  <div>
+  </div>
+</div>
