--- a/givehelp.html
+++ b/givehelp.html
@@ -4,38 +4,52 @@ layout: default
 permalink: givehelp
 ---
 
-<div id="content-container" style="display:flex; justify-content: center; flex-direction: row;
-background-image: linear-gradient(to bottom right, #bfbfbf, white)"> <!--background to be washed-out photo-->
-  <section id="section-container" style="display:flex; flex-direction: column; width: 75%"">
-    <div id="quote-container" class="d-flex justify-content-center align-items-center" style="width: 100%; height: 300px; background-color: blue;">
-      <div id="matthew-quote" style="color: white; font-size: 150%; background-color: transparent; text-align: center; margin-left: 20%; margin-right: 20%">
-        <strong>“Then the righteous will answer him, 'Lord, when did we see you hungry and feed you,
-          or thirsty and give you something to drink?' ... The King will reply, 'Truly I tell you,
-          whatever you did for the least of these brothers and sisters of mine, you did for me.'”</strong> - Matthew 25:37,40 NIV
+<div class="d-flex flex-row justify-content-center" id="content-container"
+style="background-image: linear-gradient(to bottom right, #bfbfbf, white)"> <!--background to be washed-out photo-->
+<div id="quote-container" class="d-flex justify-content-center align-items-center" style="width: 100%; height: 300px; background-image: sharing-bread.jpg;">
+  <div id="matthew-quote" style="color: white; font-size: 150%; background-color: transparent; text-align: center; margin-left: 20%; margin-right: 20%">
+     “Lord, when did we see you hungry and feed you, or thirsty and give you something to drink?" ... "Truly I tell you,
+      whatever you did for the least of these brothers and sisters of mine, you did for me." - Matthew 25:37,40 NIV
+  </div>
+</div>
+  <section class="d-flex flex-column col-md-9" id="section-container">
+    <div style="width: 100%; background-color: white">
+    <!--<div style="margin: 30px 10%; padding: 30px; background-color: white">-->
+      <h3 style="color: #1e7b1e">Becoming Part of the Solution</h3>
+      <p>Your participation in the work of CAEAP allows you play a role in solving the problem
+        of hunger in our communities, no matter how much or how little you are able to offer.
+        You can contribute to our organization in the following ways
+      </p>
+      <div class="card">
+        <h4 class="card-title">Give Food</h4>
+        <hr/>
+        <p>We accept tax-deductible donations of non-perishable food items, such as grains and canned goods, at our
+          pantry location at St. Elizabeth of Hungary Roman Catholic Church (1 Grove Pl., Pittsburgh, PA 15236).
+          You can call us at (412) 207-1657 to set up an appointment to drop off items.
+        </p>
       </div>
-    </div>
-    <div style="width: 75%; margin: 30px 10%; padding: 30px; background-color: white">
-      <h3 style="color: #1e7b1e">Latest News</h3>
-      <ul>
-        <li style="margin-bottom: 20px">
-          Vel facete mentitum inimicus te. Tantas graeco deseruisse te usu, pro nonumy graecis eu.
-          An pri munere commodo argumentum, ex doctus gloriatur persequeris pro.
-        </li>
-        <li style="margin-bottom: 20px">
-          Te homero luptatum delicata ius, ornatus commune eu vim, ferri conclusionemque an pro.
-          Ad autem lorem vis, no recteque instructior pro. Est at agam verear inermis.
-          Et viris officiis per, sea ei vero laoreet.
-        </li>
-        <li style="margin-bottom: 20px">
-          Vix ad suscipit invidunt, per hinc fugit accusata in, possim repudiare euripidis eu vis.
-          Graeco discere an mel, et nusquam fuisset nam. Vim et audiam indoctum maiestatis,
-          eos iudico hendrerit te. Iusto minimum te mel, no ullum menandri cum.
-        </li>
-        <li style="margin-bottom: 20px">
-          Vis ad falli laoreet appellantur, sale placerat et vim, pri fabulas voluptua
-          luptatum ut. Ei nec meis lorem. Facete oblique nec no, liberavisse suscipiantur ei eam.
-        </li>
-      </ul>
+      <div class="card">
+        <h4 class="card-title">Give Time</h4>
+        <hr/>
+        <p>Our volunteers are the face of CAEAP to the community and they form the link between our resources
+          and the members of our community who need them. We need our volunteers to run our
+          food distributions on Tuesday mornings from 9:00 AM - 12:00 PM and for preparing for food distribution
+          on Monday mornings. Even if you can only come once a month or less to an event, or for part of an event
+          (for example, if you are only available for the first or second half of a distribution due to other commitments)
+          we are open to finding a way to allow you to serve. Contact us at (412) 207-1657 to volunteer.
+        </p>
+      </div>
+      <div class="card">
+        <h4 class="card-title">Give Money</h4>
+        <hr/>
+        <p>When you give financial resources to CAEAP you help us:</p>
+        <ul>
+          <li>Provide housing and medical assistance to qualifying families</li>
+          <li>Buy food to help us maintain a healthy, diverse, and well-stocked pantry</li>
+          <li>Maintain a small but very dedicated staff, including our director and assistant director</li>
+        </ul>
+        <p>Additionally, your gifts are tax-deductible. Contact us at (412) 207-1657 to learn more.</p>
+      </div>
     </div>
   </section>
 
