Formatting updates to givehelp page

--- a/givehelp.html
+++ b/givehelp.html
@@ -4,15 +4,14 @@ layout: default
 permalink: givehelp
 ---
 
-<div class="d-flex flex-row justify-content-center" id="content-container"
-style="background-image: linear-gradient(to bottom right, #bfbfbf, white)"> <!--background to be washed-out photo-->
 <div id="quote-container" class="d-flex justify-content-center align-items-center" style="width: 100%; height: 300px; background-image: sharing-bread.jpg;">
   <div id="matthew-quote" style="color: white; font-size: 150%; background-color: transparent; text-align: center; margin-left: 20%; margin-right: 20%">
      “Lord, when did we see you hungry and feed you, or thirsty and give you something to drink?" ... "Truly I tell you,
       whatever you did for the least of these brothers and sisters of mine, you did for me." - Matthew 25:37,40 NIV
   </div>
 </div>
-  <section class="d-flex flex-column col-md-9" id="section-container">
+<section class="d-flex flex-row" id="section-container">
+  <div class="col-md-9 d-flex flex-column">
     <div style="width: 100%; background-color: white">
     <!--<div style="margin: 30px 10%; padding: 30px; background-color: white">-->
       <h3 style="color: #1e7b1e">Becoming Part of the Solution</h3>
@@ -20,17 +19,15 @@ style="background-image: linear-gradient(to bottom right, #bfbfbf, white)"> <!--
         of hunger in our communities, no matter how much or how little you are able to offer.
         You can contribute to our organization in the following ways
       </p>
-      <div class="card">
-        <h4 class="card-title">Give Food</h4>
-        <hr/>
+      <div class="card" style="margin-top: 15px; marginp-bottom: 15px">
+        <h4 class="card-title" style="color: #1e7b1e">Give Food</h4>
         <p>We accept tax-deductible donations of non-perishable food items, such as grains and canned goods, at our
           pantry location at St. Elizabeth of Hungary Roman Catholic Church (1 Grove Pl., Pittsburgh, PA 15236).
           You can call us at (412) 207-1657 to set up an appointment to drop off items.
         </p>
       </div>
-      <div class="card">
-        <h4 class="card-title">Give Time</h4>
-        <hr/>
+      <div class="card" style="margin-top: 15px; marginp-bottom: 15px">>
+        <h4 class="card-title" style="color: #1e7b1e">Give Time</h4>
         <p>Our volunteers are the face of CAEAP to the community and they form the link between our resources
           and the members of our community who need them. We need our volunteers to run our
           food distributions on Tuesday mornings from 9:00 AM - 12:00 PM and for preparing for food distribution
@@ -39,9 +36,8 @@ style="background-image: linear-gradient(to bottom right, #bfbfbf, white)"> <!--
           we are open to finding a way to allow you to serve. Contact us at (412) 207-1657 to volunteer.
         </p>
       </div>
-      <div class="card">
-        <h4 class="card-title">Give Money</h4>
-        <hr/>
+      <div class="card" style="margin-top: 15px; marginp-bottom: 15px">>
+        <h4 class="card-title" style="color: #1e7b1e">Give Money</h4>
         <p>When you give financial resources to CAEAP you help us:</p>
         <ul>
           <li>Provide housing and medical assistance to qualifying families</li>
@@ -51,9 +47,8 @@ style="background-image: linear-gradient(to bottom right, #bfbfbf, white)"> <!--
         <p>Additionally, your gifts are tax-deductible. Contact us at (412) 207-1657 to learn more.</p>
       </div>
     </div>
-  </section>
-
-  <div style="width: 25%; position: -webkit-sticky; position: sticky; padding: 30px; background-color: white">
+  </div>
+  <div class="col-md-3" style="padding: 30px; background-color: white">
     <h3 style="color: #1e7b1e">Items Urgently Needed</h3>
     <ul>
       <li>Bread</li>
@@ -64,4 +59,4 @@ style="background-image: linear-gradient(to bottom right, #bfbfbf, white)"> <!--
       <li>Whole-grain pasta</li>
     </ul>
   </div>
-</div>
+</section>
