More formatting updates on givehelp

--- a/givehelp.html
+++ b/givehelp.html
@@ -4,7 +4,7 @@ layout: default
 permalink: givehelp
 ---
 
-<div id="quote-container" class="d-flex justify-content-center align-items-center" style="width: 100%; height: 300px; background-image: sharing-bread.jpg;">
+<div id="quote-container" class="d-flex justify-content-center align-items-center" style="width: 100%; height: auto; background-image: sharing-bread.jpg;">
   <div id="matthew-quote" style="color: white; font-size: 150%; background-color: transparent; text-align: center; margin-left: 20%; margin-right: 20%">
      “Lord, when did we see you hungry and feed you, or thirsty and give you something to drink?" ... "Truly I tell you,
       whatever you did for the least of these brothers and sisters of mine, you did for me." - Matthew 25:37,40 NIV
@@ -19,15 +19,15 @@ permalink: givehelp
         of hunger in our communities, no matter how much or how little you are able to offer.
         You can contribute to our organization in the following ways
       </p>
-      <div class="card" style="margin-top: 15px; marginp-bottom: 15px">
-        <h4 class="card-title" style="color: #1e7b1e">Give Food</h4>
+      <div class="card" style="margin-top: 15px; margin-bottom: 15px">
+        <h4 class="card-title">Give Food</h4>
         <p>We accept tax-deductible donations of non-perishable food items, such as grains and canned goods, at our
           pantry location at St. Elizabeth of Hungary Roman Catholic Church (1 Grove Pl., Pittsburgh, PA 15236).
           You can call us at (412) 207-1657 to set up an appointment to drop off items.
         </p>
       </div>
-      <div class="card" style="margin-top: 15px; marginp-bottom: 15px">>
-        <h4 class="card-title" style="color: #1e7b1e">Give Time</h4>
+      <div class="card" style="margin-top: 15px; margin-bottom: 15px">>
+        <h4 class="card-title">Give Time</h4>
         <p>Our volunteers are the face of CAEAP to the community and they form the link between our resources
           and the members of our community who need them. We need our volunteers to run our
           food distributions on Tuesday mornings from 9:00 AM - 12:00 PM and for preparing for food distribution
@@ -36,8 +36,8 @@ permalink: givehelp
           we are open to finding a way to allow you to serve. Contact us at (412) 207-1657 to volunteer.
         </p>
       </div>
-      <div class="card" style="margin-top: 15px; marginp-bottom: 15px">>
-        <h4 class="card-title" style="color: #1e7b1e">Give Money</h4>
+      <div class="card" style="margin-top: 15px; margin-bottom: 15px">>
+        <h4 class="card-title">Give Money</h4>
         <p>When you give financial resources to CAEAP you help us:</p>
         <ul>
           <li>Provide housing and medical assistance to qualifying families</li>
