Updates to givehelp and index

--- a/givehelp.html
+++ b/givehelp.html
@@ -20,31 +20,39 @@ permalink: givehelp
         You can contribute to our organization in the following ways
       </p>
       <div class="card" style="margin-top: 15px; margin-bottom: 15px">
-        <h4 class="card-title">Give Food</h4>
-        <p>We accept tax-deductible donations of non-perishable food items, such as grains and canned goods, at our
-          pantry location at St. Elizabeth of Hungary Roman Catholic Church (1 Grove Pl., Pittsburgh, PA 15236).
-          You can call us at (412) 207-1657 to set up an appointment to drop off items.
-        </p>
+        <div class="card-body">
+          <h4 class="card-title">Give Food</h4>
+          <p class="card-text">We accept tax-deductible donations of non-perishable food items, such as grains and canned goods, at our
+            pantry location at St. Elizabeth of Hungary Roman Catholic Church (1 Grove Pl., Pittsburgh, PA 15236).
+            You can call us at (412) 207-1657 to set up an appointment to drop off items.
+          </p>
+        </div>
       </div>
-      <div class="card" style="margin-top: 15px; margin-bottom: 15px">>
-        <h4 class="card-title">Give Time</h4>
-        <p>Our volunteers are the face of CAEAP to the community and they form the link between our resources
-          and the members of our community who need them. We need our volunteers to run our
-          food distributions on Tuesday mornings from 9:00 AM - 12:00 PM and for preparing for food distribution
-          on Monday mornings. Even if you can only come once a month or less to an event, or for part of an event
-          (for example, if you are only available for the first or second half of a distribution due to other commitments)
-          we are open to finding a way to allow you to serve. Contact us at (412) 207-1657 to volunteer.
-        </p>
+      <div class="card" style="margin-top: 15px; margin-bottom: 15px">
+        <div class="card-body">
+          <h4 class="card-title">Give Time</h4>
+          <p class="card-text">Our volunteers are the face of CAEAP to the community and they form the link between our resources
+            and the members of our community who need them. We need our volunteers to run our
+            food distributions on Tuesday mornings from 9:00 AM - 12:00 PM and for preparing for food distribution
+            on Monday mornings. Even if you can only come once a month or less to an event, or for part of an event
+            (for example, if you are only available for the first or second half of a distribution due to other commitments)
+            we are open to finding a way to allow you to serve. Contact us at (412) 207-1657 to volunteer.
+          </p>
+        </div>
       </div>
-      <div class="card" style="margin-top: 15px; margin-bottom: 15px">>
-        <h4 class="card-title">Give Money</h4>
-        <p>When you give financial resources to CAEAP you help us:</p>
-        <ul>
-          <li>Provide housing and medical assistance to qualifying families</li>
-          <li>Buy food to help us maintain a healthy, diverse, and well-stocked pantry</li>
-          <li>Maintain a small but very dedicated staff, including our director and assistant director</li>
-        </ul>
-        <p>Additionally, your gifts are tax-deductible. Contact us at (412) 207-1657 to learn more.</p>
+      <div class="card" style="margin-top: 15px; margin-bottom: 15px">
+        <div class="card-body">
+          <h4 class="card-title">Give Money</h4>
+          <div class="card-text">
+            <p>When you give financial resources to CAEAP you help us:</p>
+            <ul>
+              <li>Provide housing and medical assistance to qualifying families</li>
+              <li>Buy food to help us maintain a healthy, diverse, and well-stocked pantry</li>
+              <li>Maintain a small but very dedicated staff, including our director and assistant director</li>
+            </ul>
+            <p>Additionally, your gifts are tax-deductible. Contact us at (412) 207-1657 to learn more.</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
