--- a/givehelp.html
+++ b/givehelp.html
@@ -4,14 +4,26 @@ layout: default
 permalink: givehelp
 ---
 
-<div id="quote-container" class="d-flex justify-content-center align-items-center" style="width: 100%; height: auto; background-image: sharing-bread.jpg;">
-  <div id="matthew-quote" style="color: white; font-size: 150%; background-color: transparent; text-align: center; margin-left: 20%; margin-right: 20%">
+<div id="quote-container" class="d-flex justify-content-center align-items-center" style="width: 100%; height: 100%; background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('sharing-bread-crpd1.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover">
+  <div id="matthew-quote" style="color: white; font-size: 150%; background-color: transparent; text-align: center; margin: 5% 20% 5% 20%;">
      “Lord, when did we see you hungry and feed you, or thirsty and give you something to drink?" ... "Truly I tell you,
       whatever you did for the least of these brothers and sisters of mine, you did for me." - Matthew 25:37,40 NIV
   </div>
 </div>
-<section class="d-flex flex-row" id="section-container">
-  <div class="col-md-9 d-flex flex-column">
+<section class="row container-fluid" id="section-container">
+  <div class="col-md-3" style="padding: 30px; background-color: white">
+    <div class="rounded" style="background-color: #bfbfbf; padding: 15px">
+      <div style="padding: 15px">
+        <h3 style="color: #1e7b1e">Items Urgently Needed</h3>
+        <ul>
+          {% for item in site.data.itemsNeeded %}
+          <li><strong>{{ item }}</strong></li>
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="order-sm-first col-md-9">
     <div style="width: 100%; background-color: white">
     <!--<div style="margin: 30px 10%; padding: 30px; background-color: white">-->
       <h3 style="color: #1e7b1e">Becoming Part of the Solution</h3>
@@ -56,15 +68,5 @@ permalink: givehelp
       </div>
     </div>
   </div>
-  <div class="col-md-3" style="padding: 30px; background-color: white">
-    <h3 style="color: #1e7b1e">Items Urgently Needed</h3>
-    <ul>
-      <li>Bread</li>
-      <li>Milk</li>
-      <li>Orange Juice</li>
-      <li>Diapers</li>
-      <li>Canned vegetables</li>
-      <li>Whole-grain pasta</li>
-    </ul>
-  </div>
+
 </section>
