--- a/givehelp.html
+++ b/givehelp.html
@@ -4,12 +4,12 @@ layout: default
 permalink: givehelp
 ---
 
-<div id="quote-container" class="d-flex justify-content-center align-items-center" style="width: 100%; height: 100%; background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('sharing-bread-crpd1.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover">
+<!--<div id="quote-container" class="d-flex justify-content-center align-items-center" style="width: 100%; height: 100%; background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('sharing-bread-crpd1.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover">
   <div id="matthew-quote" style="color: white; font-size: 150%; background-color: transparent; text-align: center; margin: 5% 20% 5% 20%;">
      “Lord, when did we see you hungry and feed you, or thirsty and give you something to drink?" ... "Truly I tell you,
       whatever you did for the least of these brothers and sisters of mine, you did for me." - Matthew 25:37,40 NIV
   </div>
-</div>
+</div>-->
 <section class="row container-fluid" id="section-container">
   <div class="col-md-3" style="padding: 30px; background-color: white">
     <div class="rounded" style="background-color: #bfbfbf; padding: 15px">
@@ -24,16 +24,17 @@ permalink: givehelp
     </div>
   </div>
   <div class="order-sm-first col-md-9">
-    <div style="width: 100%; background-color: white">
+    <div style="width: 100%; background-color: white; padding: 30px">
     <!--<div style="margin: 30px 10%; padding: 30px; background-color: white">-->
-      <h3 style="color: #1e7b1e">Becoming Part of the Solution</h3>
+      <h3 style="color: #1e7b1e">Become a Part of the Solution</h3>
       <p>Your participation in the work of CAEAP allows you play a role in solving the problem
         of hunger in our communities, no matter how much or how little you are able to offer.
-        You can contribute to our organization in the following ways
+        You can contribute to our organization in the following ways:
       </p>
+      <hr/>
       <div class="card" style="margin-top: 15px; margin-bottom: 15px">
+        <div class="card-header h4" style="color: #1e7b1e">Give Food</div>
         <div class="card-body">
-          <h4 class="card-title">Give Food</h4>
           <p class="card-text">We accept tax-deductible donations of non-perishable food items, such as grains and canned goods, at our
             pantry location at St. Elizabeth of Hungary Roman Catholic Church (1 Grove Pl., Pittsburgh, PA 15236).
             You can call us at (412) 207-1657 to set up an appointment to drop off items.
@@ -41,8 +42,8 @@ permalink: givehelp
         </div>
       </div>
       <div class="card" style="margin-top: 15px; margin-bottom: 15px">
+        <div class="card-header h4" style="color: #1e7b1e">Give Time</div>
         <div class="card-body">
-          <h4 class="card-title">Give Time</h4>
           <p class="card-text">Our volunteers are the face of CAEAP to the community and they form the link between our resources
             and the members of our community who need them. We need our volunteers to run our
             food distributions on Tuesday mornings from 9:00 AM - 12:00 PM and for preparing for food distribution
@@ -53,13 +54,13 @@ permalink: givehelp
         </div>
       </div>
       <div class="card" style="margin-top: 15px; margin-bottom: 15px">
+        <div class="card-header card-title h4" style="color: #1e7b1e">Give Money</div>
         <div class="card-body">
-          <h4 class="card-title">Give Money</h4>
           <div class="card-text">
             <p>When you give financial resources to CAEAP you help us:</p>
             <ul>
               <li>Provide housing and medical assistance to qualifying families</li>
-              <li>Buy food to help us maintain a healthy, diverse, and well-stocked pantry</li>
+              <li>Buy food in order to maintain a healthy, diverse, and well-stocked pantry</li>
               <li>Maintain a small but very dedicated staff, including our director and assistant director</li>
             </ul>
             <p>Additionally, your gifts are tax-deductible. Contact us at (412) 207-1657 to learn more.</p>
