--- a/index.html
+++ b/index.html
@@ -8,24 +8,44 @@ redirect-from:
   - index.html
 ---
 
-<!--maybe for bottom half: style="background-image: linear-gradient(to bottom right, #bfbfbf, white)"-->
+<!--maybe for bottom half: style="background-image: linear-gradient(to bottom right, #bfbfbf, white)"  for images: style="max-width:100%; max-height:100%; object-fit: fill"-->
 
-<div id="quote-container" class="d-flex justify-content-center align-items-center" style="width: 100%; height: 100%; background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('sharing-bread-crpd1.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover">
+<!--<div id="quote-container" class="d-flex justify-content-center align-items-center" style="width: 100%; height: 100%; background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('sharing-bread-crpd1.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover">
   <div id="matthew-quote" style="color: white; font-size: 150%; background-color: transparent; text-align: center; margin: 5% 20% 5% 20%;">
      “Lord, when did we see you hungry and feed you, or thirsty and give you something to drink?" ... "Truly I tell you,
       whatever you did for the least of these brothers and sisters of mine, you did for me." - Matthew 25:37,40 NIV
   </div>
+</div>-->
+<div class="row container-fluid d-none d-md-inline-flex m-0 p-0">
+    <div class="col-md-4 m-0 p-0"><img src="entrance-door.jpg" alt="Entrance Door" class="img-fluid"/></div>
+    <div class="col-md-4 m-0 p-0"><img src="nuts-and-grains.jpg" alt="Nuts & Grains" class="img-fluid"/></div>
+    <div class="col-md-4 m-0 p-0"><img src="produce-line.jpg" alt="Produce Line" class="img-fluid"/></div>
 </div>
-<div id="content-container" class="row container-fluid">
-  <div class="col-md-3" style="padding: 30px; background-color: white">
-    <div class="rounded" style="background-color: #bfbfbf; padding: 15px">
-      <div style="padding: 15px">
-        <h3 style="color: #1e7b1e">Items Urgently Needed</h3>
-        <ul>
+<div>
+    <div class="m-0 p-0 d-md-none"><img src="entrance-door.jpg" alt="Entrance Door" class="img-fluid"/></div>
+</div>
+<div id="content-container" class="row container-fluid" style="width: 100%">
+  <div class="col-md-3" style="padding: 15px; background-color: white">
+    <div class="card">
+      <div class="card-header h4" style="color: white; background-color: #1e7b1e">Items Urgently Needed</div>
+      <div class="card-body" style="background-color: #e1e5eb">
           {% for item in site.data.itemsNeeded %}
           <li><strong>{{ item }}</strong></li>
           {% endfor %}
-        </ul>
+      </div>
+    </div>
+    <div class="card mt-3">
+      <div class="card-header h4" style="color: white; background-color: #1e7b1e">2021 Calendar</div>
+      <div class="card-body" style="background-color: #e1e5eb">
+          {% for item in site.data.calendar %}
+          <div class="mb-2">
+            <div><strong>{{ item.date }}</strong></div>
+            {% for event in item.events %}
+            <li>{{ event }}</li>
+            {% endfor %}
+          </div>
+          {% endfor %}
+
       </div>
     </div>
   </div>
@@ -33,7 +53,7 @@ redirect-from:
     <h3 style="color: #1e7b1e">News</h3>
     <ul>
       {% for headline in site.data.headlines %}
-      <li style="margin-top: 10px; margin-bottom: 10px">{{ headline }}</li>
+      <li style="font-size: 120%; margin-top: 10px; margin-bottom: 10px">{{ headline }}</li>
       {% endfor %}
     </ul>
   </div>
