Changed to about page

--- a/about.html
+++ b/about.html
@@ -12,13 +12,13 @@ permalink: about
       serving families in our communities, regardless of their religious affiliation,
       who are in need of food or other forms of assistance. Our service area is centered
       symbolically around the interchange of PA Route 51 and Curry Hollow Rd. in Pleasant Hills, PA
-      - a feature known locally as simply "the Cloverleaf".
+      - a feature known locally as "the Cloverleaf".
     </p>
-    <p>Our main service to the area is our community food pantry operating out of St. Elizabeth
+    <p>Our main service is our community food pantry operating out of St. Elizabeth
       of Hungary Roman Catholic Church (1 Grove Pl., Pittsburgh, PA 15236) - our service area constitutes
       the area within a two-mile radius of the pantry. We hold
-      food distribution events every other Tuesday from 9:00 AM to 12:00 PM at our pantry location
-      for clients in our service area. As of November 2020, CAEAP serves <strong>over 200 households</strong>
+      food distribution events for clients in our service areaevery other Tuesday from 9:00 AM to 12:00 PM
+      at our pantry location. As of November 2020, CAEAP serves <strong>over 200 households</strong>
       in our service area with a team of <strong>30 volunteers</strong> who aid in food collection and
       distribution.
     </p>
@@ -30,10 +30,8 @@ permalink: about
       <li>New and gently used hats, coats, and gloves</li>
       <li>Emergency financial assistance for housing or medical expenses for clients who meet
         certain established criteria (call us at (412) 207-1657)
+    </ul>
     <p>For information about registering as a client of CAEAP, please visit our <a href="gethelp">Get Help</a> page.</p>
     <p>For information about donating supplies or volunteering with us, please visit our <a href="givehelp">Give Help</a> page.</p>
-  </div>
-  <hr/>
-  <div>
   </div>
 </div>
