--- a/index.html
+++ b/index.html
@@ -52,9 +52,14 @@ redirect-from:
   <div class="order-sm-first col-md-9" style="padding: 30px; background-color: white">
     <h3 style="color: #1e7b1e">News</h3>
     <ul>
-      {% for headline in site.data.headlines %}
-      <li style="font-size: 120%; margin-top: 10px; margin-bottom: 10px">{{ headline }}</li>
-      {% endfor %}
+      {% if site.data.headlines.size > 0 %}
+        {% for headline in site.data.headlines %}
+          <li style="font-size: 120%; margin-top: 10px; margin-bottom: 10px">{{ headline }}</li>
+        {% endfor %}
+      {% else %}
+        <p style="font-size: 120%; font-color: #e1e5eb">We have no important updates at the moment, but please check back for the
+          latest news and event information.</p>
+      {% endif %}
     </ul>
   </div>
 </div>
