Fixed typos and bad formatting on givehelp.html

--- a/givehelp.html
+++ b/givehelp.html
@@ -38,12 +38,13 @@ style="width: 100%; height: 100%; background: linear-gradient( rgba(0, 0, 0, 0.5
   <div class="order-sm-first col-md-9">
     <div style="width: 100%; background-color: white; padding: 30px">
     <!--<div style="margin: 30px 10%; padding: 30px; background-color: white">-->
-      <h3 style="color: #1e7b1e">Become a Part of the Solution</h3>
-      <p>Your participation in the work of CAEAP allows you play a role in solving the problem
-        of hunger in our communities, no matter how much or how little you are able to offer.
-        You can contribute to our organization in the following ways:
-      </p>
-      <hr/>
+      <div style="padding: 10px 0px 10px 0px">
+        <h3 style="color: #1e7b1e">Become a Part of the Solution</h3>
+        <p>Your participation in the work of CAEAP allows you to play a role in solving the problem
+          of hunger in our communities, no matter how much or how little you are able to offer.
+          You can contribute to our organization in the following ways:
+        </p>
+      </div>
       <div class="card" style="margin-top: 15px; margin-bottom: 15px">
         <div class="card-header h4" style="color: #1e7b1e">Give Food</div>
         <div class="card-body">
@@ -57,7 +58,7 @@ style="width: 100%; height: 100%; background: linear-gradient( rgba(0, 0, 0, 0.5
         <div class="card-header h4" style="color: #1e7b1e">Give Time</div>
         <div class="card-body">
           <p class="card-text">Our volunteers are the face of CAEAP to the community and they form the link between our resources
-            and the members of our community who need them. We need our volunteers to run our
+            and our clients who need them. We need our volunteers to run our
             food distributions on Tuesday mornings from 9:00 AM - 12:00 PM and for preparing for food distribution
             on Monday mornings. Even if you can only come once a month or less to an event, or for part of an event
             (for example, if you are only available for the first or second half of a distribution due to other commitments)
@@ -81,5 +82,4 @@ style="width: 100%; height: 100%; background: linear-gradient( rgba(0, 0, 0, 0.5
       </div>
     </div>
   </div>
-
 </section>
